fix padding on mobile for user slider.

--- a/src/components/UserList/userlist.scss
+++ b/src/components/UserList/userlist.scss
@@ -3,9 +3,9 @@
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
-.user-list{
+.user-list {
     margin: 30px 0;
-    padding: 0 90px;
+    padding: 0 40px;
     position: relative;
 
     #previous,
@@ -106,5 +106,12 @@
                 }
             }
         }
+    }
+}
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: $screen-sm-min) {
+    .user-list {
+        padding: 0 90px;
     }
 }
